# Client_python

./: .gitignore  README.md  setup.cfg
clientpy3/: badsecret.cfg  clientEnv.sh  testClient.py
clientpy3/geosmeta/: tool.py  util.py
geosmeta/: MakeFrame.py  __init__.py  api.py  gmClient.py  gm_DownTree.py  gm_create_doc.py  gm_create_project.py  gm_fileuse.py  gm_find_docs.py  gm_get_doc_by_id.py  gm_get_project.py  gm_get_project_details.py  gm_get_research_group_details.py  gm_modify_status.py  gm_update_gmDoc.py  gmadmin_create_user.py  tool.py
gm_tests/: gmTestBase.py  pymongoT.py  runtest.slurm  testApp1.py  workflow.py
