[metadata]
name = geosmeta
version = attr: geosmeta.__version__
author = Mike Mineter
author_email = m.mineter@ed.ac.uk
url = https://github.com/GeosMeta/GeosMetaClient_python
description = Client for GeosMETA metadata tracker
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
license = GPL3
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = geosmeta
zip_safe = True
include_package_data = True
install_requires = requests

[options.entry_points]
console_scripts =
    gmadmin_create_user = geosmeta.gmadmin_create_user:main
    gm_create_doc = geosmeta.gm_create_doc:main
    gm_create_project = geosmeta.gm_create_project:main
    gm_DownTree = geosmeta.gm_DownTree:main
    gm_fileuse = geosmeta.gm_fileuse:main
    gm_find_docs = geosmeta.gm_find_docs:main
    gm_get_doc_by_id = geosmeta.gm_get_doc_by_id:main
    gm_get_project_details = geosmeta.gm_get_project_details:main
    gm_get_project = geosmeta.gm_get_project:main
    gm_get_research_group_details = geosmeta.gm_get_research_group_details:main
    gm_modify_status = geosmeta.gm_modify_status:main
    gm_update_gmDoc = geosmeta.gm_update_gmDoc:main

[options.package_data]
* = README.md


